# sigma-hs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Setup.hs  sigma-hs.cabal  sigma-proofs.cabal
.github/workflows/: haskell.yml
rust/sigma-ffi/: Cargo.toml
rust/sigma-ffi/src/: lib.rs
src/Crypto/: DuplexSponge.hs  FiniteField.hs  LinearMap.hs  PrimeOrderGroup.hs  Random.hs  Sigma.hs
src/Crypto/Sigma/: DuplexSponge.hs  Error.hs  FiatShamir.hs  Group.hs  Keccak.hs  LinearMap.hs  Protocol.hs  Random.hs  Scalar.hs  Shake128.hs
src/Crypto/Sigma/Curve25519/: FFI.hs  Random.hs  Ristretto255.hs
test/: Main.hs
test/Test/Crypto/Sigma/: CrossCompat.hs  Curve25519.hs  FiatShamir.hs  Keccak.hs  Properties.hs  Protocol.hs  Shake128.hs
