cabal-version:   3.12
name:            sigma-hs
version:         0.1.0.0
license:         NONE
author:          Samuel Schlesinger
maintainer:      sgschlesinger@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Crypto.FiniteField, Crypto.PrimeOrderGroup, Crypto.Sigma, Crypto.LinearMap
    build-depends:    base ^>=4.18.3.0, bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
