cabal-version:   3.0
name:            sigma-proofs
version:         0.1.0.0
synopsis:        Zero-knowledge sigma protocols over prime-order groups
description:
  Haskell implementation of zero-knowledge sigma protocols and the
  Fiat-Shamir transformation, following the IETF CFRG drafts for
  sigma protocols and Fiat-Shamir. Includes Ristretto255 group and
  SHAKE128/Keccak sponge implementations backed by Rust FFI, and
  cross-compatibility tests against the sigma-rs reference.
  .
  This library has not been independently audited. Use at your own risk.
license:         MIT
license-file:    LICENSE
author:          Samuel Schlesinger
maintainer:      sgschlesinger@gmail.com
category:        Cryptography
build-type:      Custom
extra-doc-files: CHANGELOG.md
                 README.md
extra-source-files: rust/sigma-ffi/Cargo.toml
                    rust/sigma-ffi/Cargo.lock
                    rust/sigma-ffi/src/lib.rs

source-repository head
  type:     git
  location: https://github.com/SamuelSchlesinger/sigma-hs.git

custom-setup
  setup-depends: base       >=4.18 && <5
               , Cabal      >=3.0 && <4
               , process    >=1.6 && <1.7
               , directory  >=1.3 && <1.4
               , filepath   >=1.4 && <1.6

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Crypto.Sigma.Error
                    , Crypto.Sigma.Scalar
                    , Crypto.Sigma.Group
                    , Crypto.Sigma.Protocol
                    , Crypto.Sigma.LinearMap
                    , Crypto.Sigma.Random
                    , Crypto.Sigma.DuplexSponge
                    , Crypto.Sigma.FiatShamir
                    , Crypto.Sigma.Shake128
                    , Crypto.Sigma.Keccak
                    , Crypto.Sigma.Curve25519.FFI
                    , Crypto.Sigma.Curve25519.Ristretto255
    build-depends:    base         >=4.18 && <5
                    , bytestring   >=0.11 && <0.13
                    , entropy      >=0.4  && <0.5
                    , transformers >=0.5  && <0.7
                    , vector       >=0.12 && <0.14
    hs-source-dirs:   src
    default-language: Haskell2010
    extra-lib-dirs:   rust/sigma-ffi/target/release
    extra-libraries:  sigma_ffi
    if os(osx)
      frameworks: Security
      extra-libraries: System
    if os(linux)
      extra-libraries: pthread dl m

test-suite sigma-proofs-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Test.Crypto.Sigma.Curve25519
                    , Test.Crypto.Sigma.Shake128
                    , Test.Crypto.Sigma.Keccak
                    , Test.Crypto.Sigma.Protocol
                    , Test.Crypto.Sigma.FiatShamir
                    , Test.Crypto.Sigma.CrossCompat
                    , Test.Crypto.Sigma.Properties
    build-depends:    base          >=4.18 && <5
                    , sigma-proofs
                    , bytestring    >=0.11 && <0.13
                    , tasty         >=1.4  && <1.6
                    , tasty-hunit   >=0.10 && <0.11
                    , hedgehog      >=1.2  && <1.6
                    , tasty-hedgehog >=1.4 && <1.5
                    , vector        >=0.12 && <0.14
    hs-source-dirs:   test
    default-language: Haskell2010
